Listeners en items del menu

--- a/Segundo bimestre/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Segundo bimestre/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,7 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+        <!--
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
@@ -16,5 +17,12 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+
+        <item
+            android:id="@+id/nav_activity"
+
+            android:title="asd" />
+        -->
+
     </group>
 </menu>
