--- a/Segundo bimestre/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Segundo bimestre/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_lista_actividades">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.proyecto_segundo_bimestre_lopez_quijano.ui.home.HomeFragment"
+        android:id="@+id/nav_lista_actividades"
+        android:name="com.example.proyecto_segundo_bimestre_lopez_quijano.ui.home.ListaActividadesFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_lista_actividades" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.proyecto_segundo_bimestre_lopez_quijano.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.proyecto_segundo_bimestre_lopez_quijano.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
