--- a/Segundo bimestre/app/src/main/res/layout/activity_configurar_lista.xml
+++ b/Segundo bimestre/app/src/main/res/layout/activity_configurar_lista.xml
@@ -10,28 +10,26 @@
         android:id="@+id/tv_tituloConfigurarLista"
         android:layout_width="195dp"
         android:layout_height="31dp"
+        android:layout_marginTop="88dp"
         android:text="Título de la lista:"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.217"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintEnd_toEndOf="@+id/et_tituloConfigurarLista"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/et_tituloConfigurarLista"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_tituloConfigurarLista"
-        android:layout_width="324dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/et_borders"
         android:ems="10"
         android:hint="Ingrese un nombre"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@+id/tv_tituloConfigurarLista"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tv_tituloConfigurarLista"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_tituloConfigurarLista" />
 
     <TextView
@@ -60,11 +58,10 @@
 
     <ListView
         android:id="@+id/lv_miembrosLista"
-        android:layout_width="321dp"
-        android:layout_height="270dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_descripcionCrear2"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_width="280dp"
+        android:layout_height="190dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintEnd_toEndOf="@+id/et_tituloConfigurarLista"
         app:layout_constraintStart_toStartOf="@+id/tv_descripcionCrear2"
         app:layout_constraintTop_toBottomOf="@+id/tv_descripcionCrear2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
