--- a/Segundo bimestre/app/src/main/res/layout/activity_visualizar_actividad.xml
+++ b/Segundo bimestre/app/src/main/res/layout/activity_visualizar_actividad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VisualizarActividad">
+    tools:context=".view.Actividad.VisualizarActividad">
 
     <Spinner
         android:id="@+id/sp_etiquetaVisualizar"
