--- a/Segundo bimestre/app/src/main/res/layout/fragment_lista_actividades.xml
+++ b/Segundo bimestre/app/src/main/res/layout/fragment_lista_actividades.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.Lista.ListaActividadesFragment">
+    tools:context=".view.Lista.NavigationBar.ListaActividadesFragment">
 
     <Button
         android:id="@+id/btn_configurar_lista"
