--- a/Segundo bimestre/app/src/main/res/menu/menu_eliminar.xml
+++ b/Segundo bimestre/app/src/main/res/menu/menu_eliminar.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/eliminar"
+        android:id="@+id/opcion_eliminar"
         android:title="Eliminar" />
 </menu>
